<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="*"
        tools:context=".fragment.AddImagesFragment">

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/selectFileButton"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:maxWidth="30dp"
            android:padding="3dip"
            android:text="@string/merge_file_select" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/selected_images_text" />

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/createPdf"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:maxWidth="30dp"
            android:padding="3dip"
            android:text="@string/create_pdf" />

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/pdfOpen"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:maxWidth="30dp"
            android:padding="10dp"
            android:text="@string/open_pdf_text"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/addImages"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:maxWidth="30dp"
            android:padding="3dip"
            android:text="@string/add_images" />

        <TextView
            android:id="@+id/mNoOfImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:visibility="gone" />

    </LinearLayout>

    <include layout="@layout/bottom_sheet" />

    <include
        android:id="@+id/layoutPermission"
        layout="@layout/storage_permission_view"
        tools:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
