<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/selectFileButton"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/merge_file_select" />

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/pdfOpen"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/open_pdf_text"
            android:visibility="gone" />

        <com.dd.morphingbutton.MorphingButton
            android:id="@+id/createPdf"
            style="@style/MorphingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/create_pdf" />
    </LinearLayout>

    <include layout="@layout/bottom_sheet" />

    <include
        android:id="@+id/layoutPermission"
        layout="@layout/storage_permission_view"
        tools:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>