<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/select_excel_file"
                style="@style/MorphingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/select_excel_file" />


            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/open_pdf"
                style="@style/MorphingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/open_pdf_text"
                android:visibility="gone" />

            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/create_excel_to_pdf"
                style="@style/MorphingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/excel_to_pdf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom|center"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/navigation_divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/more_options_text"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/enhancement_options_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                tools:itemCount="2"
                tools:listitem="@layout/item_home_row" />

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/bottom_sheet" />

    <include
        android:id="@+id/layoutPermission"
        layout="@layout/storage_permission_view"
        tools:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>